force-app/main/default/objects/MUSW__Master_Fee_List__c/MUSW__Master_Fee_List__c.object-meta.xml
<CustomObject>
    <label>Fee Template</label>
    <nameField>
        <label>Fee Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>