force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/Avo_Description__c.field-meta.xml
<CustomField>
    <fullName>Avo_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>