force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/Base__c.field-meta.xml
<CustomField>
    <fullName>Base__c</fullName>
    <label>Base</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>