force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/clariti__CashLedgerAccountName__c.field-meta.xml
<CustomField>
    <fullName>clariti__CashLedgerAccountName__c</fullName>
    <description>Name of the Ledger Account used for capturing Cash journal entries. A new Ledger Account will be created with this name if it does not already exist.</description>
    <inlineHelpText>Name of the Ledger Account used for capturing Cash journal entries. A new Ledger Account will be created with this name if it does not already exist.</inlineHelpText>
    <label>Cash Ledger Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>