force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/clariti__RevenueLedgerAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>clariti__RevenueLedgerAccountNumber__c</fullName>
    <description>Number of the Revenue Ledger Account. A new Ledger Account will be created with this number if it does not already exist.</description>
    <inlineHelpText>Number of the Revenue Ledger Account. A new Ledger Account will be created with this number if it does not already exist.</inlineHelpText>
    <label>Revenue Ledger Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>