force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>