force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/Fee_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Calculation_Type__c</fullName>
    <label>Fee Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
                <default>true</default>
                <label>Flat</label>
            </value>
            <value>
                <fullName>Tiered</fullName>
            </value>
            <value>
                <fullName>Fee Based</fullName>
            </value>
            <value>
                <fullName>Work Item Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>