force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/Fee_Formula_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Formula_Amount__c</fullName>
    <label>Fee Formula Amount</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>