force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <label>Fee Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>