force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/Flat_Amount__c.field-meta.xml
<CustomField>
    <fullName>Flat_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Flat Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>