force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <label>GL Account</label>
    <type>TextArea</type>
</CustomField>