force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/Low_Tier_Limit__c.field-meta.xml
<CustomField>
    <fullName>Low_Tier_Limit__c</fullName>
    <label>Low Tier Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>