force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <label>Multiplier</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>