force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/MUSW__Application_Types__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Application_Types__c</fullName>
    <label>Application Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Application_Types</valueSetName>
    </valueSet>
</CustomField>