force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/MUSW__Fee_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Fee_Calculation_Type__c</fullName>
    <label>Fee Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Fee</fullName>
            </value>
            <value>
                <fullName>Multiplier Fee</fullName>
            </value>
            <value>
                <fullName>Tier Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>