force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/MUSW__Fee_Description__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Fee_Description__c</fullName>
    <label>Fee Description</label>
    <type>TextArea</type>
</CustomField>