force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/MUSW__Fee_Formula__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Fee_Formula__c</fullName>
    <label>Fee Formula</label>
    <length>3900</length>
    <type>LongTextArea</type>
</CustomField>