force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/MUSW__Filter_Mapping__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Filter_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter Mapping</label>
    <referenceTo>MUSW__Template_Object_Mapping__c</referenceTo>
    <relationshipLabel>Fee Templates (Filter Mapping)</relationshipLabel>
    <relationshipName>Fee_Templates_Filter_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>