force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/MUSW__License_Phases__c.field-meta.xml
<CustomField>
    <fullName>MUSW__License_Phases__c</fullName>
    <label>License Phases</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__License_Phases</valueSetName>
    </valueSet>
</CustomField>