force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/MUSW__Project_Statuses__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Project_Statuses__c</fullName>
    <label>Project Statuses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Project_Statuses</valueSetName>
    </valueSet>
</CustomField>