force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/MUSW__Standard_Price__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Standard_Price__c</fullName>
    <label>Standard Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>