force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/MUSW__Subtype__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Void Receipt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>