force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/Object_Trigger_Status__c.field-meta.xml
<CustomField>
    <fullName>Object_Trigger_Status__c</fullName>
    <label>Object Trigger Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Object_Trigger_Status</valueSetName>
    </valueSet>
</CustomField>