force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/Parent_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Fee_Type__c</fullName>
    <label>Parent Fee Type</label>
    <type>TextArea</type>
</CustomField>