force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/Related_Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Related_Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Work Item</label>
    <referenceTo>MUSW__Master_Work_Item_List__c</referenceTo>
    <relationshipName>Master_Fee_List</relationshipName>
    <type>Lookup</type>
</CustomField>