force-app/main/default/objects/MUSW__Master_Fee_List__c/fields/Trigger_Status__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Status__c</fullName>
    <label>Trigger Status</label>
    <type>TextArea</type>
</CustomField>