force-app/main/default/objects/MUSW__Master_Fee_List__c/recordTypes/License.recordType-meta.xml
<RecordType>
    <fullName>License</fullName>
    <active>true</active>
    <description>License Fees</description>
    <label>License</label>
</RecordType>