force-app/main/default/objects/MUSW__Master_Fee_List__c/recordTypes/MUSW__Application_Fee.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Application_Fee</fullName>
    <active>true</active>
    <label>Application Fee</label>
</RecordType>