force-app/main/default/objects/MUSW__Master_Fee_List__c/recordTypes/MUSW__Complaint_Fee.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Complaint_Fee</fullName>
    <active>true</active>
    <label>Complaint Fee</label>
</RecordType>