force-app/main/default/objects/MUSW__Master_Fee_List__c/recordTypes/MUSW__License_Fee.recordType-meta.xml
<RecordType>
    <fullName>MUSW__License_Fee</fullName>
    <active>true</active>
    <label>License Fee</label>
</RecordType>