force-app/main/default/objects/MUSW__Master_Fee_List__c/recordTypes/MUSW__Permit_Fee.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Permit_Fee</fullName>
    <active>true</active>
    <label>Permit Fee</label>
</RecordType>