force-app/main/default/objects/MUSW__Master_Fee_List__c/listViews/License_Fee.listView-meta.xml
<ListView>
    <fullName>License_Fee</fullName>
    <columns>NAME</columns>
    <columns>License_Type__c</columns>
    <columns>Fee_Type__c</columns>
    <columns>Fee_Calculation_Type__c</columns>
    <columns>Base__c</columns>
    <columns>Fee_Formula_Amount__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>License_Type__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>License Fee</label>
</ListView>