force-app/main/default/objects/MUSW__Master_Fee_List__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>License_Type__c</columns>
    <columns>GL_Account__c</columns>
    <columns>Fee_Type__c</columns>
    <columns>Fee_Calculation_Type__c</columns>
    <columns>Base__c</columns>
    <columns>Multiplier__c</columns>
    <columns>Fee_Formula_Amount__c</columns>
    <columns>Object_Trigger_Status__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>