force-app/main/default/objects/MUSW__Master_Fee_List__c/listViews/Permit_Fee_Additional_MEP.listView-meta.xml
<ListView>
    <fullName>Permit_Fee_Additional_MEP</fullName>
    <columns>NAME</columns>
    <columns>Permit_Type__c</columns>
    <columns>Fee_Type__c</columns>
    <columns>Fee_Calculation_Type__c</columns>
    <columns>Base__c</columns>
    <columns>Multiplier__c</columns>
    <columns>Fee_Formula_Amount__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permit_Type__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Permit_Type__c</field>
        <operation>notEqual</operation>
        <value>Building</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Plan Check</value>
    </filters>
    <filters>
        <field>Fee_Type__c</field>
        <operation>notEqual</operation>
        <value>APP - Application</value>
    </filters>
    <filters>
        <field>Fee_Type__c</field>
        <operation>notEqual</operation>
        <value>Reinspection Flat Fee</value>
    </filters>
    <label>Permit Fee - Additional MEP</label>
</ListView>